--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.17",
+    "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.4",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.3.2",
